import "google/protobuf/any.proto";
syntax = "proto3";

package auth;

service AuthService {

    // 用户权限服务
    // 注册
    rpc InsertAccount(Account) returns (ResponseAccount) {}
    rpc FindOneAccount(Account) returns (ResponseAccount) {}
    rpc UpdateOneAccount (Account) returns (ResponseAccount) {}

    // 用户信息
    rpc FindOneUser(User) returns (ResponseUser) {}
    rpc FindUsers(User) returns (ResponseUser) {}
    rpc UpdateUser(User) returns (ResponseUser) {}
}

message ResponseAccount {
    int32 code = 1;
    string type = 2;
    string message = 3;
    optional Account data = 4;
}

message User {
    optional string id = 1;
    repeated string ids = 2;
    optional string accountId = 3;
    repeated string accountIds = 4;
    optional string name = 5;
    repeated string names = 6;
    optional string label = 7;
    repeated string labels = 8;
    optional string info = 9;
    optional string avatar = 10;
    optional string del = 11;
}

message ResponseUser {
    int32 code = 1;
    string type = 2;
    string message = 3;
    optional User data = 4;
    repeated User list = 5;
    optional Page page = 6;
}

message Page {
    int32 page = 1;
    int32 pageSize = 2;
    int32 count = 3;
}

// 账号信息
message Account {
    int32 id = 1;
    string account = 2;
    optional string password = 3;
    optional string createDate = 4;
    optional string updateDate = 5;
    optional string del = 6;
    optional string terrace = 7;
    optional string terraceId = 8;
}